# haskell-road

./: .gitignore  README.md  haskell-road.cabal
src/Exercise/: Chap1.hs  Chap10.hs  Chap2.hs  Chap3.hs  Chap4.hs  Chap5.hs  Chap6.hs  Chap7.hs  Chap8.hs
src/HaskellRoad/: COR.hs  DB.hs  FAIS.hs  FCT.hs  GS.hs  Hierarchy.hs  IAR.hs  Nats.hs  POL.hs  Polynomials.hs  PowerSeries.hs  REL.hs  STAL.hs  SetEq.hs  SetOrd.hs  TAMO.hs  TUOLP.hs  WWN.hs
