name:                haskell-road
version:             0.0.0.0
synopsis:            Codes from The Haskell Road to Logic, Maths and Programming
-- description:
homepage:            https://github.com/cbpark/haskell-road
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HaskellRoad.GS
                       HaskellRoad.TAMO
                       HaskellRoad.TUOLP
                       HaskellRoad.STAL
                       HaskellRoad.SetEq
                       HaskellRoad.Hierarchy
                       HaskellRoad.REL
                       HaskellRoad.SetOrd
                       Exercise.Chap1
                       Exercise.Chap2
                       Exercise.Chap3
                       Exercise.Chap4
                       Exercise.Chap5
  other-modules:       HaskellRoad.DB
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults