name:                haskell-road
version:             0.0.0.0
synopsis:            Codes from The Haskell Road to Logic, Maths and Programming
-- description:
homepage:            https://github.com/cbpark/haskell-road
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HaskellRoad.GS
                       HaskellRoad.TAMO
                       HaskellRoad.TUOLP
                       HaskellRoad.STAL
                       HaskellRoad.REL
                       HaskellRoad.FCT
                       HaskellRoad.IAR
                       HaskellRoad.WWN
                       HaskellRoad.POL
                       HaskellRoad.COR
                       Exercise.Chap1
                       Exercise.Chap2
                       Exercise.Chap3
                       Exercise.Chap4
                       Exercise.Chap5
                       Exercise.Chap6
                       Exercise.Chap7
                       Exercise.Chap8
                       Exercise.Chap10
  other-modules:       HaskellRoad.DB
                       HaskellRoad.SetEq
                       HaskellRoad.Hierarchy
                       HaskellRoad.SetOrd
                       HaskellRoad.Nats
                       HaskellRoad.Polynomials
  build-depends:       base >=4.7,
                       random >=1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -fno-warn-orphans